# budget-app

./: Dockerfile  README.md  pyproject.toml
budget_app/: db.sqlite3
budget_app/budget_app/: settings.py  urls.py
budget_app/example/: cash_flow_db.py  transaction_view.py  transactions_form.py  urls.py  views.py
budget_app/example/templates/example/: template_example.html  template_real_transactions.html  template_transaction.html  template_with_variables.html  transactions_form.html
