[tool.poetry]
name = "budget-app"
version = "0.1.0"
description = ""
authors = ["Andrew <144724707+Andrii-Lykhovets@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"
mysql-connector-python = "^8.3.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
